--- a/Dev-Blog/BlazorServer/Pages/Modals/EditComment.razor
+++ b/Dev-Blog/BlazorServer/Pages/Modals/EditComment.razor
@@ -1,30 +1,24 @@
-﻿@inject ICommentRepository _comments;
+﻿@inject State.AppState AppState
 
 <section modal>
     <EditForm Model=@Comment OnValidSubmit=@UpdateComment>
         <DataAnnotationsValidator />
         <ValidationSummary />
         <InputTextArea @bind-Value=Comment.Content placeholder=@Comment.Content />
-        <input modal type="submit" value="Submit" />
+        <input modal type="submit" value="Update" />
     </EditForm>
 </section>
 
 @code {
-    [CascadingParameter] BlazoredModalInstance ModalInstance { get; set; }
+    [CascadingParameter]
+    BlazoredModalInstance ModalInstance { get; set; }
 
     [Parameter]
     public CommentModel Comment { get; set; }
 
-    @*CommentModel comment;*@
-
-    @*protected override async Task OnInitializedAsync()
-        {
-            comment = await _comments.GetComment(Id);
-        }*@
-
     private async Task UpdateComment()
     {
-        await _comments.Update(Comment);
+        await AppState.UpdateComment(this, Comment);
         await ModalInstance.CloseAsync();
     }
 }
