--- a/Dev-Blog/BlazorServer/Pages/Modals/SignIn.razor
+++ b/Dev-Blog/BlazorServer/Pages/Modals/SignIn.razor
@@ -1,5 +1,4 @@
-﻿@using System.ComponentModel.DataAnnotations;
-@inject IJSRuntime JSRuntime
+﻿@inject IJSRuntime JSRuntime
 
 <section modal>
     <EditForm Model=signIn OnValidSubmit=SubmitForm>
