Fix Delete modal.

--- a/Dev-Blog/BlazorServer/Pages/Modals/DeleteAccount.razor
+++ b/Dev-Blog/BlazorServer/Pages/Modals/DeleteAccount.razor
@@ -1,4 +1,4 @@
-﻿<section modal>
+﻿<section modal delete>
     <form method="post" action="/deleteAccount">
         <button modal type="submit">Yes</button>
     </form>
