--- a/Dev-Blog/BlazorServer/Shared/MainLayout.razor
+++ b/Dev-Blog/BlazorServer/Shared/MainLayout.razor
@@ -19,7 +19,8 @@
         {
             Class = "custom-modal",
             FocusFirstElement = true,
-            OverlayCustomClass = "modal-background"
+            OverlayCustomClass = "modal-background",
+            DisableBackgroundCancel = true
         };
     }
 }
