--- a/Dev-Blog/BlazorServer/Pages/Posts.razor
+++ b/Dev-Blog/BlazorServer/Pages/Posts.razor
@@ -143,7 +143,8 @@ else
         {
             Class = "custom-modal",
             FocusFirstElement = true,
-            OverlayCustomClass = "modal-background"
+            OverlayCustomClass = "modal-background",
+            DisableBackgroundCancel = true
         };
 
         username = _http.HttpContext.User.Identity.Name;
