--- a/Dev-Blog/BlazorServer/wwwroot/css/Reset.css
+++ b/Dev-Blog/BlazorServer/wwwroot/css/Reset.css
@@ -20,11 +20,15 @@ time, mark, audio, video, input {
     padding: 0;
     border: 0;
     font-size: 100%;
-    /*font: inherit;*/
     vertical-align: baseline;
     background: inherit;
     text-decoration: none;
 }
+
+    button:focus {
+        outline: none;
+    }
+
 /* HTML5 display-role reset for older browsers */
 article, aside, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section {
