--- a/Dev-Blog/BlazorServer/Pages/Modals/Register.razor
+++ b/Dev-Blog/BlazorServer/Pages/Modals/Register.razor
@@ -43,12 +43,12 @@
         bool emailExists = AppState.CheckEmail(registerVM.Email);
 
         if (usernameExists)
-            await JSRuntime.InvokeVoidAsync("ShowTag", "li[existingUser]");
+            await JSRuntime.InvokeVoidAsync("ShowTag", "li[existingUser]", "block");
         else
             await JSRuntime.InvokeVoidAsync("HideTag", "li[existingUser]");
 
         if (emailExists)
-            await JSRuntime.InvokeVoidAsync("ShowTag", "li[existingEmail]");
+            await JSRuntime.InvokeVoidAsync("ShowTag", "li[existingEmail]", "block");
         else
             await JSRuntime.InvokeVoidAsync("HideTag", "li[existingEmail]");
 
