--- a/Dev-Blog/BlazorServer/Pages/Posts.razor
+++ b/Dev-Blog/BlazorServer/Pages/Posts.razor
@@ -10,7 +10,7 @@
     <button addPost @onclick="@(() => _modal.Show<AddPost>("Add Post", options))">Add Post</button>
 </AuthorizeView>
 
-@if (page == null)
+@if (AppState.Posts == null)
 {
     <p>Loading...</p>
 }
