--- a/Dev-Blog/BlazorServer/Pages/Index.razor
+++ b/Dev-Blog/BlazorServer/Pages/Index.razor
@@ -23,7 +23,7 @@ else
 <section youtube>
     @*<iframe src="#"></iframe>*@
     <h2>YouTube Channel</h2>
-    <h2>Comming Soon</h2>
+    <h2>Coming Soon</h2>
 </section>
 
 <!-- SUGGESTION BOX -->
