--- a/Dev-Blog/BlazorServer/Pages/_Host.cshtml
+++ b/Dev-Blog/BlazorServer/Pages/_Host.cshtml
@@ -3,6 +3,7 @@
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @{
     Layout = null;
+    Response.Headers["Cache-Control"] = "no-store";
 }
 <link href="_content/Blazored.Modal/blazored-modal.css" rel="stylesheet" />
 
